# gravacao-transcricao-de-meet-teams-zoom-e-afins

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  record_meet_sounds.py  setup_models.py
src/: main.py
src/config/: constants.py  settings.py
src/core/: aligner.py  audio_capture.py  audio_preprocessing.py  diarizer.py  formatter.py  meet_detector.py  meet_visual.py  pipeline.py  process_monitor.py  speaker_identifier.py  task_queue.py  transcriber_base.py  transcriber_groq.py  transcriber_qwen.py  transcriber_whisper.py  vexa_client.py
src/gui/: recordings_window.py  settings_window.py  tk_root.py
src/tray/: tray_app.py
src/utils/: audio_utils.py  gpu_check.py  logger.py  meeting_url_parser.py  startup.py
